# SnappyBird

./: CMakeLists.txt
src/: main.cpp
